fix: sideMenu text overflow display ellipsis

--- a/src/components/sider/index.less
+++ b/src/components/sider/index.less
@@ -24,6 +24,12 @@
       &::after {
         transition: none;
       }
+
+      a {
+        overflow: hidden;
+        text-overflow:ellipsis;
+        white-space: nowrap;
+      }
     }
 
     .ant-menu-item-selected {
